--- a/templates/steam.html.twig
+++ b/templates/steam.html.twig
@@ -1,29 +1,21 @@
- 
-  <div class="my-wizard">
-    <div class="my-wizard--page-wrapper">
-      {% for page in pages %}
-        {%
-          set classes = [
-            'my-wizard--page',
-            not loop.first ? 'hidden',
-          ]
-        %}
-        <div {{ attributes.addClass(classes) }}>
-          <div class="page--title-wrapper">
-            <h1 class="title">{{ page.title }}</h1>
-          </div>
-          <div class="page--body-wrapper">
-            {{ page.body }}
-          </div>
-        </div>
-      {% endfor %}
-    </div>
-    <div class="my-wizard--nav-wrapper">
-      <p class="nav-info">
-        <span class="my-wizard--current-page">1</span> / 
-        <span class="my-wizard--total-pages">{{ pages|length }}</span>
-      </p>
-      <button type="button" class="my-wizard--previous-page">Previous</button> 
-      <button type="button" class="my-wizard--next-page">Next</button> 
-    </div>
+
+  <div class="steam-games">
+    <table>
+      <thead>
+        <tr>
+        <th>game</th>
+        <th>tempo de jogo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if (attributes['response']) { %>
+        <% _.each(attributes.response.games, function(game) { %>
+          <tr>
+            <td><%= game.name %></td>
+            <td><%= parseInt(game.playtime_forever / 60, 10) %> horas</td>
+          </tr>
+        <% }) %>
+        <% } %>
+      </tbody>
+    </table>
   </div>
